--- a/index.html
+++ b/index.html
@@ -25,13 +25,30 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Authentication</a></li>
-              <li><a href="#">My Movies</a></li>
-              <li><a href="#">Search</a></li>
+              <li id="authlink">Authentication</a></li>
+              <li id="movielink">My Movies</a></li>
+              <li id="searchlink">Search</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
+
+    <div id="search" class="hide">
+          <div class="form-group">
+            <h1>Search Movies</h1>
+            <input type="text" class="form-control" id="input" placeholder="">
+          </div>
+    </div>
+
+    <div id="myMovies" class="hide">
+      <h1>My Movies</h1>
+    </div>
+
+    <div id="authScreen" class="hide">
+      <h1>Sign In</h1>
+      <button type="button" class="btn btn-primary btn-lg">Login with Google</button>
+    </div>
+
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
