--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li id="authlink">Authentication</a></li>
-              <li id="movielink">My Movies</a></li>
-              <li id="searchlink">Search</a></li>
+              <li><a id="authlink">Authentication</a></li>
+              <li><a id="movielink">My Movies</a></li>
+              <li><a id="searchlink">Search</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
