--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div><!-- /.container-fluid -->
       </nav>
 
-    <div id="search" class="hide text-center">
+    <div id="search" class="text-center">
         <h1>Search Movies</h1>
           <div class="input-group col-sm-6 col-sm-offset-3">
             <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon1"></span>
-            <input type="text" class="form-control" id="input" placeholder="Search" aria-describedby="basic-addon1">
+            <input type="text" class="form-control" id="searchBar" placeholder="Search" aria-describedby="basic-addon1">
           </div>
     </div>
 
