--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <div id="myMovies" class="hide">
       <h1>My Movies</h1>
+      <div id="savedMovies"></div>
     </div>
 
     <div id="authScreen" class="hide">
