--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
     <div id="myMovies" class="hide">
       <h1>My Movies</h1>
+      <div id="filterButtons">
+        <button class="btn btn-danger wishlist">Show WishList Movies</button>
+        <button class="btn btn-info watched">Show Watched Movies</button>
+        <button class="btn btn-warning all">Show All Movies</button>
+      </div>
       <div id="savedMovies"></div>
     </div>
 
