--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div><!-- /.container-fluid -->
       </nav>
 
-    <div id="search" class="text-center">
+    <div id="search" class="text-center hide">
         <h1>Search Movies</h1>
           <div class="input-group col-sm-6 col-sm-offset-3">
             <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon1"></span>
@@ -51,9 +51,62 @@
       <div id="savedMovies"></div>
     </div>
 
-    <div id="authScreen" class="hide">
-      <h1>Sign In</h1>
-      <button type="button" class="btn btn-primary btn-lg">Login with Google</button>
+    <div id="authScreen" class="">
+      <div id="login-form">
+        <h1 class="text-center">Sign In</h1>
+      <form class="form-horizontal col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2">
+        <div class="form-group">
+          <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <a id="register-link">Need to Register?</a>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" id="signin-btn" class="btn btn-default">Sign in</button>
+          </div>
+        </div>
+      </form>
+      </div>
+
+      <div  id="registration-form" class="hide">
+          <h1 class="text-center">Register</h1>
+        <form class="form-horizontal col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2">
+          <div class="form-group">
+            <label for="registerEmail" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="registerEmail" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="registerPassword" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="registerPassword" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <a id="signin-link">Go to Login</a>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" id="register-btn" class="btn btn-default">Register</button>
+            </div>
+          </div>
+        </form>
+        </div>
     </div>
 
     <div id="movies"></div>
