--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li><a id="authlink">Authentication</a></li>
-              <li><a id="movielink">My Movies</a></li>
-              <li><a id="searchlink">Search</a></li>
+              <li><a class="hide" id="movielink">My Movies</a></li>
+              <li><a class="hide" id="searchlink">Search</a></li>
+              <li><a class="hide"id="logout">Log Out</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -48,10 +49,10 @@
         <button class="btn btn-info watched">Show Watched Movies</button>
         <button class="btn btn-warning all">Show All Movies</button>
       </div>
-      <div id="savedMovies"></div>
+      <div class="" id="savedMovies"></div>
     </div>
 
-    <div id="authScreen" class="">
+    <div id="authScreen">
       <div id="login-form">
         <h1 class="text-center">Sign In</h1>
       <form class="form-horizontal col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2">
